--- a/production/03-route.yaml
+++ b/production/03-route.yaml
@@ -2,13 +2,13 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   labels:
-    app: micro-queue-management-backend
-  name: micro-queue-management-backend-route
+    app: demo-argocd
+  name: demo-argocd-route
 spec:
-  host: backend.apps.delorean.globalshared-dev.seat.cloud.vwgroup.com
+  host: demo-argocd.apps.delorean.globalshared-dev.seat.cloud.vwgroup.com
   port:
     targetPort: 8080
   to:
     kind: Service
-    name: micro-queue-management-backend-service
+    name: demo-argocd-service
     weight: 100
